<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_user">

    <fragment
        android:id="@+id/nav_user"
        android:name="lk.javainstitute.govisevana_admin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="lk.javainstitute.govisevana_admin.ui.userManagement.UserManagementFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_user_management" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="lk.javainstitute.govisevana_admin.ui.productManagement.productManagementFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_product_management" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="lk.javainstitute.govisevana_admin.ui.ordersManagement.OrdersManagementFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders_management" />

    <fragment
        android:id="@+id/nav_banners"
        android:name="lk.javainstitute.govisevana_admin.ui.logout.LogoutFragment"
        android:label="@string/menu_banners"
        tools:layout="@layout/fragment_logout" />

</navigation>